# longmem

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  server.json
.cursor/: mcp.json
.cursor/rules/: longmem.mdc
.github/workflows/: publish.yml  test.yml
.mcp-registry/: server.json
src/longmem/: __init__.py  cli.py  config.py  embedder.py  server.py  store.py
src/longmem/templates/: CLAUDE.md  longmem.mdc
tests/: conftest.py  test_cli.py  test_embedder_config.py  test_server.py  test_store.py  test_store_extended.py
