[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "longmem"
version = "0.1.1"
description = "Persistent cross-project memory for Cursor and Claude Code — stores problem/solution pairs with semantic search"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["cursor", "claude-code", "mcp", "memory", "llm", "rag", "embeddings", "lancedb", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=3.2.4,<4",
    "lancedb>=0.17.0",
    "pyarrow>=14.0.0",
    "httpx>=0.27.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]

[project.urls]
"Homepage" = "https://github.com/marerem/longmem"
"Bug Tracker" = "https://github.com/marerem/longmem/issues"

[project.scripts]
longmem = "longmem.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/longmem"]

# Ensure non-Python template files are included in the wheel
[tool.hatch.build.targets.wheel.shared-data]

[tool.hatch.build]
include = [
    "src/longmem/**",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0.0",
]
